# dip

./: .gitignore  02_checkerboard_gaussian.ppm  CMakeLists.txt  requirements.txt
cpp/: CMakeLists.txt  background.cpp  background.hpp  colordecomp.cpp  dft.cpp  dft.h  hello.cpp  hello.h  histogram.hpp  noise.h  opencv.ui  simple.cpp  simple.h  test.cpp  videotest.cpp
python/: opencv.py  task2.py
